--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,6 +20,19 @@ body{
   padding: 0;
   margin: 0;
 }
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 0.25rem rgba(0,0,0,0.3);
+    border-radius: 0.25rem;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 0.25rem;
+    -webkit-box-shadow: inset 0 0 0.25rem rgba(0,0,0,0.5);
+}
 riot-tag-workbench{
   position:absolute;
   top:0;
